--- a/app/src/main/res/layout/home_user_list.xml
+++ b/app/src/main/res/layout/home_user_list.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:layout_marginTop="8dp"
-            android:text="Badge Count:"
+            android:text="@string/badge_count"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/users_name"
@@ -74,33 +74,33 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="1" />
+                tools:text="531" />
 
             <TextView
                 android:id="@+id/silver_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/bronze_count"
                 app:layout_constraintStart_toEndOf="@+id/bronze_badge"
                 app:layout_constraintTop_toTopOf="@+id/bronze_count"
                 app:layout_constraintVertical_bias="0.4"
-                tools:text="1" />
+                tools:text="527" />
 
             <TextView
                 android:id="@+id/gold_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="8dp"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="@+id/silver_count"
                 app:layout_constraintStart_toEndOf="@+id/silver_badge"
                 app:layout_constraintTop_toTopOf="@+id/silver_count"
                 app:layout_constraintVertical_bias="0.4"
-                tools:text="1" />
+                tools:text="66" />
 
             <ImageView
                 android:id="@+id/bronze_badge"
@@ -138,7 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="Reputation:"
+            android:text="@string/reputation"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/location_text_view"
